--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "crysoline-lib",
-  "module": "src/index.ts",
+  "name": "@crysoline/lib",
+  "version": "0.1.0",
   "type": "module",
-  "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
+    "prepublishOnly": "npm run build",
     "lint": "biome lint .",
     "format": "biome format . --write"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
+    "typescript": "^5",
     "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
   }
 }
