--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@crysoline/lib",
   "description": "The official crysoline library for anime, manga using the Crysoline API",
+  "license": "MIT",
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
