--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "@crysoline/lib",
   "description": "The official crysoline library for anime, manga using the Crysoline API",
   "license": "MIT",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/crysoline/crysoline-lib.git"
+  },
+  "homepage": "https://github.com/crysoline/crysoline-lib",
+  "bugs": {
+    "url": "https://github.com/crysoline/crysoline-lib/issues"
   },
   "scripts": {
     "build": "tsc",
