--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "format": "biome format . --write"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.13",
-    "typescript": "^5",
+    "@biomejs/biome": "^2.4.2",
+    "typescript": "^5.9.3",
     "@types/bun": "latest"
   },
   "keywords": [
